--- a/dicee.html
+++ b/dicee.html
@@ -10,7 +10,7 @@
   <body>
 
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Refresh The PAge</h1>
 
       <div class="dice">
         <p>Player 1</p>
@@ -28,7 +28,7 @@
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    www 🎲 PLAyEr2002002 🎲 com
   </footer>
 
   <script src="index.js"></script>
